--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <log4j.version>1.2.17</log4j.version>
         <allure.version>2.25.0</allure.version>
         <lombok.version>1.18.30</lombok.version>
+        <restasured.version>5.4.0</restasured.version>
+        <resasure.allure.version>2.26.0</resasure.allure.version>
+        <gson.version>2.10.1</gson.version>
         <suite></suite>
     </properties>
 
@@ -52,6 +55,22 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${restasured.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-rest-assured</artifactId>
+            <version>${resasure.allure.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
