--- a/src/main/resources/onliner.properties
+++ b/src/main/resources/onliner.properties
@@ -1,3 +1,3 @@
 urlApi=https://cart.onliner.by/sdapi
 browser=chrome
-browser.option=disable-dev-shm-usage;no-sandbox;headless
+browser.option=window-size=2880,1800;disable-dev-shm-usage;no-sandbox;headless
